--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="top-bar">
-  <h1>Dashboard</h1>
+  <h1>Gestor de Despesas</h1>
 </header>
 
 <!-- ============================================ -->
@@ -41,43 +41,45 @@
 </nav>
 <!-- ============================================ -->
 
-<section class="summary-card">
-  <h2>Outubro 2025</h2>
-  
-  <div class="summary-item">
-    <span>Despesa Total </span>
-    <strong> 5000esc</strong>
-  
-  </div>
-  <div class="summary-item">
-    <span>Orçamento restante </span>
-    <strong>3000esc / 7000esc</strong>
-  </div>
-</section>
+<main>
+  <section class="summary-card">
+    <h2>Outubro 2025</h2>
+    
+    <div class="summary-item">
+      <span>Despesa Total </span>
+      <strong> 5000esc</strong>
+    
+    </div>
+    <div class="summary-item">
+      <span>Orçamento restante </span>
+      <strong>3000esc / 7000esc</strong>
+    </div>
+  </section>
 
-<!--Secção do gráfico de pizza-->
-<div class="chart-section">
-  <h3 class="chart-title">Despesas por Categoria</h3>
-  <div class="chart-container">
-    <canvas id="pieChart"></canvas>
+  <!--Secção do gráfico de pizza-->
+  <div class="chart-section">
+    <h3 class="chart-title">Despesas por Categoria</h3>
+    <div class="chart-container">
+      <canvas id="pieChart"></canvas>
+    </div>
   </div>
-</div>
 
-<!--Secção do gráfico de barras-->
-<div class="chart-section">
-  <h3 class="chart-title">Comparação Mensal de Gastos</h3>
-  <div class="chart-container-large">
-    <canvas id="barChart"></canvas>
+  <!--Secção do gráfico de barras-->
+  <div class="chart-section">
+    <h3 class="chart-title">Comparação Mensal de Gastos</h3>
+    <div class="chart-container-large">
+      <canvas id="barChart"></canvas>
+    </div>
   </div>
-</div>
 
-<!--Seção do gráfico de linhas -->
-<div class="chart-section">
-  <h3 class="chart-title">Evolução de Despesas ao Longo do Tempo</h3>
-  <div class="chart-container-large">
-    <canvas id="lineChart"></canvas>
+  <!--Seção do gráfico de linhas -->
+  <div class="chart-section">
+    <h3 class="chart-title">Evolução de Despesas ao Longo do Tempo</h3>
+    <div class="chart-container-large">
+      <canvas id="lineChart"></canvas>
+    </div>
   </div>
-</div>
+</main>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../scripts/graficos.js"></script>
