--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,51 @@
   </div>
 </main>
 
+<!--Botão flutuante-->
+<button class="floating-btn" id="addExpenseBtn">
+  <span class="pen-icon">✏️</span>
+</button>
+
+<!-- Modal -->
+<div class="modal-overlay" id="modalOverlay">
+  <div class="modal-box">
+    <h3>Nova Despesa</h3>
+
+    <div class="form-group">
+      <label>Gasto:</label>
+      <input type="text" id="gastoInput" placeholder="Descreve o gasto">
+    </div>
+
+    <div class="form-group">
+      <label>Categoria:</label>
+      <div class="dropdown">
+        <button class="dropdown-btn" id="categoryBtn">Selecionar categoria</button>
+        <div class="dropdown-content" id="dropdownContent">
+          <a href="#" data-value="alimentacao">Alimentação</a>
+          <a href="#" data-value="transporte">Transporte</a>
+          <a href="#" data-value="saude">Saúde</a>
+          <a href="#" data-value="lazer">Lazer</a>
+          <a href="#" data-value="educacao">Educação</a>
+          <a href="#" data-value="outros">Outros</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>Valor (esc):</label>
+      <input type="number" id="valorInput" placeholder="0.00" step="0.01">
+    </div>
+
+    <div class="modal-actions">
+      <button class="btn-save" id="saveBtn">Salvar</button>
+      <button class="btn-cancel" id="cancelBtn">Cancelar</button>
+    </div>
+  </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../scripts/graficos.js"></script>
+<!--script para controlar o modal-->
+<script src="../scripts/modal.js"></script>
 </body>
 </html>
