Perfil de Utilizador

--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -35,38 +35,12 @@
         </a>
     </nav>
 
-    <main>
-        <div class="user-profile-image">
-                <img src="../images/profile.jpg" alt="Imagem do perfil">
-        </div>
 
-        <div class="user-profile-data">
-            <h1 class="user-profile-name"><strong>*Nome de Utilizador*</strong> </h1>
-            <a href="profile_edit.html">Editar Perfil</a>
-        </div>
-
-        <div class="user-profile-contact">
-            <p>e-mail</p>
-            <p>Nº Telefone</p>
-            <p>Endereço</p>
-        </div>
-
-
-        <div class="help-center">
-            <a href="mailto:help.center@gmail.com">
-                <span class="help-center-icon">✉️</span>
-                <span>Mensagem de suporte</span>
-            </a>
-        </div>
-
-        <div class="user-logout">
-
-            <a href="login.html">
-                <span class="logout-icon">⏻</span>
-                <span>Logout</span>
-            </a>
-        </div>
-    </main>
+    <div class="user-profile-change-img"></div>
+    <div class="user-change-name"></div>
+    <div class="user-change-email"></div>
+    <div class="user-change -pwd"></div>
+    <div class="user-delete"></div>
 
 
 </body>
