--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,34 +8,13 @@
 
 </head>
 <body>
-    <nav class="top-nav">
-        <a href="index.html" class="nav-item">
-            <span class="nav-icon">📊</span>
-            <span class="nav-label">Dashboard</span>
-        </a>
-        <a href="despesas.html" class="nav-item">
-            <span class="nav-icon">💸</span>
-            <span class="nav-label">Despesas</span>
-        </a>
-        <a href="categorias.html" class="nav-item">
-            <span class="nav-icon">📁</span>
-            <span class="nav-label">Categorias</span>
-        </a>
-        <a href="historico.html" class="nav-item">
-            <span class="nav-icon">📋</span>
-            <span class="nav-label">Histórico</span>
-        </a>
-        <a href="config.html" class="nav-item">
-            <span class="nav-icon">⚙️</span>
-            <span class="nav-label">Configurações</span>
-        </a>
-        <a href="profile.html" class="nav-item active">
-            <span class="nav-image"><img src="../images/profile.jpg" alt="Imagem do perfil"></span>
-            <span class="nav-label">Perfil</span>
-        </a>
-    </nav>
+    <div class="goback">
+        <a href="options.html">⬅</a>
+    </div>
 
-    <main>
+
+    <main class="profile-main">
+
         <div class="user-profile-image">
                 <img src="../images/profile.jpg" alt="Imagem do perfil">
         </div>
@@ -48,22 +27,14 @@
         <div class="user-profile-contact">
             <p>e-mail</p>
             <p>Nº Telefone</p>
+        </div>
+        <div class="user-profile-contact">
             <p>Endereço</p>
         </div>
-
-
         <div class="help-center">
             <a href="mailto:help.center@gmail.com">
                 <span class="help-center-icon">✉️</span>
                 <span>Mensagem de suporte</span>
-            </a>
-        </div>
-
-        <div class="user-logout">
-
-            <a href="login.html">
-                <span class="logout-icon">⏻</span>
-                <span>Logout</span>
             </a>
         </div>
     </main>
