--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -7,40 +7,15 @@
     <link rel="stylesheet" href="../styles/styles.css">
 
 </head>
-<body>
-    <nav class="top-nav">
-        <a href="index.html" class="nav-item">
-            <span class="nav-icon">📊</span>
-            <span class="nav-label">Dashboard</span>
-        </a>
-        <a href="despesas.html" class="nav-item">
-            <span class="nav-icon">💸</span>
-            <span class="nav-label">Despesas</span>
-        </a>
-        <a href="categorias.html" class="nav-item">
-            <span class="nav-icon">📁</span>
-            <span class="nav-label">Categorias</span>
-        </a>
-        <a href="historico.html" class="nav-item">
-            <span class="nav-icon">📋</span>
-            <span class="nav-label">Histórico</span>
-        </a>
-        <a href="config.html" class="nav-item">
-            <span class="nav-icon">⚙️</span>
-            <span class="nav-label">Configurações</span>
-        </a>
-        <a href="profile.html" class="nav-item active">
-            <span class="nav-image"><img src="../images/profile.jpg" alt="Imagem do perfil"></span>
-            <span class="nav-label">Perfil</span>
-        </a>
-    </nav>
 
+<body>
+    <div class="goback">
+        <a href="profile.html">⬅</a>
+    </div>
 
     <div class="user-profile-change-img"></div>
     <div class="user-change-name"></div>
-    <div class="user-change-email"></div>
-    <div class="user-change -pwd"></div>
-    <div class="user-delete"></div>
+
 
 
 </body>
