--- a/styles/styles.css
+++ b/styles/styles.css
@@ -489,9 +489,8 @@ main {
 
 /* ============================================ */
 /* NOVA SEÇÃO: PÁGINA DE PERFIL */
-/* ============================================ */
 
-main {
+.profile-main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -530,6 +529,7 @@ main {
 .user-profile-data a {
     font-size: 16px;
     color: var(--primary);
+    text-decoration: none;
     font-weight: bold;
     transition: color 0.2s;
 }
@@ -550,23 +550,24 @@ main {
     align-items: center;
     justify-content: center;
     padding: 15px 20px;
+    gap: 10px;
     background: var(--white);
     border-radius: 15px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     text-decoration: none;
     color: var(--text-dark);
     font-weight: bold;
+
 }
 
-.help-center a,
-.user-logout a {
+.help-center a {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 15px 20px;
     background: var(--white);
     border-radius: 15px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     text-decoration: none;
     color: var(--text-dark);
     font-weight: bold;
@@ -582,15 +583,6 @@ main {
     margin-right: 15px;
 }
 
-
-.user-logout a {
-    color: #e74c3c;
-}
-
-.user-logout .logout-icon {
-    color: #e74c3c;
-}
-
 .top-nav .nav-image {
     width: 30px;
     height: 30px;
@@ -603,4 +595,53 @@ main {
     width: 100%;
     height: 100%;
     object-fit: fill;
+}
+
+/* ============================================ */
+/* NOVA SEÇÃO: PÁGINA DE configurações */
+.goback {
+    width: 100%;
+    max-width: 50px;
+}
+.goback a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    padding: 12px 30px;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    text-decoration: none;
+    color: var(--primary);
+    font-weight: bold;
+}
+.options-main{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 20px;
+    gap: 25px;
+}
+.user-change, .user-delete, .user-logout, .policie{
+    width: 100%;
+    max-width: 700px;
+}
+.user-change a, .user-delete a, .user-logout a, .policie a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px 30px;
+    background: var(--white);
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    text-decoration: none;
+    color: var(--text-dark);
+    font-weight: bold;
+    font-size: 20px;
+}
+.user-logout a, .user-logout.logout-icon, .user-delete a {
+    color: #f12d16;
 }
