--- a/templates/historico.html
+++ b/templates/historico.html
@@ -39,7 +39,7 @@
             <span class="nav-icon">📋</span>
             <span class="nav-label">Histórico</span>
         </a>
-        <a href="config.html" class="nav-item">
+        <a href="options.html" class="nav-item">
             <span class="nav-icon">⚙️</span>
             <span class="nav-label">Configurações</span>
         </a>
