implemented a dynamic dashboard and making use of the /account route

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,16 +43,15 @@
 
 <main>
   <section class="summary-card">
-    <h2>Outubro 2025</h2>
-    
+    <h2 id="monthYear">--</h2>
+
     <div class="summary-item">
       <span>Despesa Total </span>
-      <strong> 5000esc</strong>
-    
+      <strong id="despesaTotal">0 esc</strong>
     </div>
     <div class="summary-item">
       <span>Orçamento restante </span>
-      <strong>3000esc / 7000esc</strong>
+      <strong id="orcamentoRestante">0 esc</strong>
     </div>
   </section>
 
@@ -126,6 +125,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="../scripts/graficos.js"></script>
 <script src="../scripts/api-config.js"></script>
+<script src="../scripts/dashboard.js"></script>
 <script src="../scripts/modal.js"></script>
 </body>
 </html>
