created .gitignore and removed node_modules

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,8 +91,13 @@
     <h3>Nova Despesa</h3>
 
     <div class="form-group">
-      <label>Gasto:</label>
-      <input type="text" id="gastoInput" placeholder="Descreve o gasto">
+      <label>Título:</label>
+      <input type="text" id="gastoInput" placeholder="Título do gasto">
+    </div>
+
+    <div class="form-group">
+      <label>Descrição:</label>
+      <textarea id="descricaoInput" placeholder="Detalhes sobre o gasto" rows="3"></textarea>
     </div>
 
     <div class="form-group">
@@ -100,12 +105,12 @@
       <div class="dropdown">
         <button class="dropdown-btn" id="categoryBtn">Selecionar categoria</button>
         <div class="dropdown-content" id="dropdownContent">
-          <a href="#" data-value="alimentacao">Alimentação</a>
-          <a href="#" data-value="transporte">Transporte</a>
-          <a href="#" data-value="saude">Saúde</a>
-          <a href="#" data-value="lazer">Lazer</a>
-          <a href="#" data-value="educacao">Educação</a>
-          <a href="#" data-value="outros">Outros</a>
+          <a href="#" data-value="Alimentação">Alimentação</a>
+          <a href="#" data-value="Transporte">Transporte</a>
+          <a href="#" data-value="Saúde">Saúde</a>
+          <a href="#" data-value="Lazer">Lazer</a>
+          <a href="#" data-value="Educação">Educação</a>
+          <a href="#" data-value="Outros">Outros</a>
         </div>
       </div>
     </div>
