--- a/templates/historico.html
+++ b/templates/historico.html
@@ -52,6 +52,7 @@
          <table border="1" width="100%" cellspacing="0" cellpadding="8">
             <thead>
                 <tr>
+                    <th>Nome do Produto</th>
                     <th>Data</th>
                     <th>Descrição</th>
                     <th>Categoria</th>
